<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navigation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/searchAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inputNavigation"
                android:textColor="@color/grey"
                android:imeOptions="actionSearch"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/textMostUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostUsedLocations" />

            <Spinner
                android:id="@+id/locationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/location_array"
                android:prompt="@string/location_prompt" />

        </LinearLayout>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/destinationPreview" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:padding="40dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:context=".GoogleMaps" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                style="@style/buttonAndroid"
                android:id="@+id/btnStartNavigation"
                android:text="@string/startNavigationButton"
                android:onClick="startNavigation"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infoNavigation"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <include
                android:id="@+id/container_header_lyt"
                android:layout_height="match_parent"
                android:layout_width="fill_parent"
                layout="@layout/activity_bottomnavigationfinal"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>